--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         composeElement("p", "id", "show", "margin: 0px; padding: 0px;", "This JavaScript extension works mainly by embedding it within the <body> tag of the html file.");
         composeElement("br", "id", "blank2", "margin: 0px; padding: 0px;", "");
         composeElement("h2", "id", "how", "margin: 0px; padding: 0px;", "Usage");
-        composeElement("li", "id", "li1", "margin: 0px; padding: 0px;", "Load the script within <script> tag.")
+        composeElement("li", "id", "li1", "margin: 0px; padding: 0px;", "load the following URL into the <script> tag.");
+        composeElement("p", "id", "p1", "margin:0px; padding;0px;", "https://html-generator.glitch.me/index.js");
         composeElement("li", "id", "li2", "margin: 0px; padding: 0px;", "Write the following script in <script> tag.");
         composeElement("p", "id", "p", "margin: 0px; padding: 0px", "composeElement(tag, type, name, cssText, input);");
         composeElement("br", "id", "blank3", "margin: 0px; padding: 0px;", "");
