--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         li{
             list-style-type: decimal;
         }
+        #p1:active {
+        color: red;
+        }
+        #td0:hover,#td10:hover,#td20:hover,#td30:hover,#td40:hover{
+        width:200px;
+        height:200px;
+        }
+        #li60:active,#li70:active,#li80:active,#li90:active{
+        width:100px;
+        height:100px;
+        }
     </style>
 </head>
 <body>
