--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         li{
             list-style-type: decimal;
         }
+        #title:hover{
+            color: white;
+        }
         #p1:active {
         color: red;
         }
