--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <script src="https://html-generator.glitch.me/index.js"></script>
+    <script src="index.js"></script>
     <script>
         composeElement("h1", "id", "title", "margin: 0px; padding: 10px; background:linear-gradient(#f00,#0f0,#00f,#0ff,#f0f,#ff0,#fff);", "HTML Generator");
         composeElement("br", "id", "blank1", "margin:0px; padding: 0px;", "")
