--- a/index.html
+++ b/index.html
@@ -31,34 +31,34 @@
 <body>
     <script src="index.js"></script>
     <script>
-        composeElement("h1", "id", "title", "margin: 0px; padding: 10px; background:linear-gradient(#f00,#0f0,#00f,#0ff,#f0f,#ff0,#fff);", "HTML Generator");
-        composeElement("br", "id", "blank1", "margin:0px; padding: 0px;", "")
-        composeElement("h2", "id", "overview", "margin: 0px; padding: 0px;", "Overview");
-        composeElement("p", "id", "show", "margin: 0px; padding: 0px;", "This JavaScript extension works mainly by embedding it within the <body> tag of the html file.");
-        composeElement("br", "id", "blank2", "margin: 0px; padding: 0px;", "");
-        composeElement("h2", "id", "how", "margin: 0px; padding: 0px;", "Usage");
-        composeElement("li", "id", "li1", "margin: 0px; padding: 0px;", "load the following URL into the <script> tag.");
-        composeElement("p", "id", "p1", "margin:0px; padding;0px;", "https://html-generator.glitch.me/index.js");
-        composeElement("li", "id", "li2", "margin: 0px; padding: 0px;", "Write the following script in <script> tag.");
-        composeElement("p", "id", "p", "margin: 0px; padding: 0px", "composeElement(tag, type, name, cssText, input);");
-        composeElement("br", "id", "blank3", "margin: 0px; padding: 0px;", "");
-        composeElement("strong", "id", "description", "margin: 0px; padding: 0px; font-style: italic;", "*Description");
-        composeElement("p", "id", "tag", "margin: 0px; padding: 0px; font-style: italic;", "tag: It shows tag name like <h1>, <p>, <li>, etc...");
-        composeElement("p", "id", "type", "margin: 0px; padding: 0px; font-style: italic;", "type: It shows attribute name like class, id, etc...");
-        composeElement("p", "id", "name", "margin: 0px; padding: 0px; font-style: italic;", "name: It shows class name, id name, etc...");
-        composeElement("p", "id", "cssText", "margin: 0px; padding: 0px; font-style: italic;", "cssText: It can be set css by writing the text.");
-        composeElement("p", "id", "input", "margin: 0px; padding: 0px; font-style: italic;", "input: It can be written the text you want to enter.");
-        composeElement("br", "id", "blank4", "margin: 0px; padding: 0px;", "");
-        composeElement("h2", "id", "sample", "margin: 0px; padding: 0px;", "Example");
+        composeElement("body", 0, "h1", "id", "title", "margin: 0px; padding: 10px; background:linear-gradient(#f00,#0f0,#00f,#0ff,#f0f,#ff0,#fff);", "HTML Generator");
+        composeElement("body", 0, "br", "id", "blank1", "margin:0px; padding: 0px;", "")
+        composeElement("body", 0, "h2", "id", "overview", "margin: 0px; padding: 0px;", "Overview");
+        composeElement("body", 0, "p", "id", "show", "margin: 0px; padding: 0px;", "This JavaScript extension works mainly by embedding it within the <body> tag of the html file.");
+        composeElement("body", 0, "br", "id", "blank2", "margin: 0px; padding: 0px;", "");
+        composeElement("body", 0, "h2", "id", "how", "margin: 0px; padding: 0px;", "Usage");
+        composeElement("body", 0, "li", "id", "li1", "margin: 0px; padding: 0px;", "load the following URL into the <script> tag.");
+        composeElement("body", 0, "p", "id", "p1", "margin:0px; padding;0px;", "https://html-generator.glitch.me/index.js");
+        composeElement("body", 0, "li", "id", "li2", "margin: 0px; padding: 0px;", "Write the following script in <script> tag.");
+        composeElement("body", 0, "body", 0, "p", "id", "p", "margin: 0px; padding: 0px", "composeElement(tag, type, name, cssText, input);");
+        composeElement("body", 0, "br", "id", "blank3", "margin: 0px; padding: 0px;", "");
+        composeElement("body", 0, "strong", "id", "description", "margin: 0px; padding: 0px; font-style: italic;", "*Description");
+        composeElement("body", 0, "p", "id", "tag", "margin: 0px; padding: 0px; font-style: italic;", "tag: It shows tag name like <h1>, <p>, <li>, etc...");
+        composeElement("body", 0, "p", "id", "type", "margin: 0px; padding: 0px; font-style: italic;", "type: It shows attribute name like class, id, etc...");
+        composeElement("body", 0, "p", "id", "name", "margin: 0px; padding: 0px; font-style: italic;", "name: It shows class name, id name, etc...");
+        composeElement("body", 0, "p", "id", "cssText", "margin: 0px; padding: 0px; font-style: italic;", "cssText: It can be set css by writing the text.");
+        composeElement("body", 0, "p", "id", "input", "margin: 0px; padding: 0px; font-style: italic;", "input: It can be written the text you want to enter.");
+        composeElement("body", 0, "br", "id", "blank4", "margin: 0px; padding: 0px;", "");
+        composeElement("body", 0, "h2", "id", "sample", "margin: 0px; padding: 0px;", "Example");
         for (let i=0; i<50; i+=10){
-        composeElement("td", "id", `td${i}`, `margin: ${i}px; padding: ${i}px; border:solid ${i}px #${i}${i}${i}; background: radial-gradient(#${i}${i/4}${i/4},#${i*2}${i}${i*2}); color:#${i/2}${i*5};`, i);
+        composeElement("body", 0, "td", "id", `td${i}`, `margin: ${i}px; padding: ${i}px; border:solid ${i}px #${i}${i}${i}; background: radial-gradient(#${i}${i/4}${i/4},#${i*2}${i}${i*2}); color:#${i/2}${i*5};`, i);
         }
         for (let j=60; j<100; j+=10){
-        composeElement("li", "id", `li${j}`, `margin: ${j}px; padding: ${j}px; border:solid ${j}px #${j}${j}${j}; background: conic-gradient(#${j*3}${j*3}${j},#${j*4}${j}${j*4},#${j}${j*2}${j*2}); color:#${j*4}; list-style-type:none;`, j);
+        composeElement("body", 0, "li", "id", `li${j}`, `margin: ${j}px; padding: ${j}px; border:solid ${j}px #${j}${j}${j}; background: conic-gradient(#${j*3}${j*3}${j},#${j*4}${j}${j*4},#${j}${j*2}${j*2}); color:#${j*4}; list-style-type:none;`, j);
         }
-        composeElement("h3", "id", "published", "margin: 0px; padding: 0px;", "Published: 16th, Jul, 2023.");
-        composeElement("h3", "id", "copyright", "margin: 0px; padding: 0px;", "Developer / Copyright: Hirotoshi Uchida");
-        composeElement("br", "id", "blank5", "margin: 0px; padding: 0px;", "");
+        composeElement("body", 0, "h3", "id", "published", "margin: 0px; padding: 0px;", "Published: 16th, Jul, 2023.");
+        composeElement("body", 0, "h3", "id", "copyright", "margin: 0px; padding: 0px;", "Developer / Copyright: Hirotoshi Uchida");
+        composeElement("body", 0, "br", "id", "blank5", "margin: 0px; padding: 0px;", "");
     </script>
 </body>
 </html>
