--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         composeElement("body", 0, "li", "id", "li1", "margin: 0px; padding: 0px;", "load the following URL into the <script> tag.");
         composeElement("body", 0, "p", "id", "p1", "margin:0px; padding;0px;", "https://html-generator.glitch.me/index.js");
         composeElement("body", 0, "li", "id", "li2", "margin: 0px; padding: 0px;", "Write the following script in <script> tag.");
-        composeElement("body", 0, "body", 0, "p", "id", "p", "margin: 0px; padding: 0px", "composeElement(parentTag, index, childTag, type, name, cssText, input);");
+        composeElement("body", 0, "p", "id", "p", "margin: 0px; padding: 0px", "composeElement(parentTag, index, childTag, type, name, cssText, input);");
         composeElement("body", 0, "br", "id", "blank3", "margin: 0px; padding: 0px;", "");
         composeElement("body", 0, "strong", "id", "description", "margin: 0px; padding: 0px; font-style: italic;", "*Description");
         composeElement("body", 0, "p", "id", "parentTag", "margin: 0px; padding: 0px; font-style: italic;", "parentTag: It shows tag name like <head>, <footer>, <div>, etc...");
